Ensure text remains visible during webfont load

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @font-face {
     font-family: proxima-nova;
     src: url(font/ProximaNova.otf);
+    font-display: swap;
 }
 body{
     display: flex;
